Added dummy paragraphs with strong and em,

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-  <h1>Hello, World!</h1>
+  <p>Et aliquip adipisicing velit sint officia commodo ullamco tempor deserunt incididunt non magna fugiat.</p>
+  <p>Amet <strong>Lorem</strong> anim ad <em>duis aliqua</em> sit esse officia sunt qui aliqua.</p>
 </body>
 
 </html>
